getPlayers script to store all the players and their keys

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,26 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+
+
 		{
 			"type": "pwa-node",
 			"request": "launch",
-			"name": "Launch Program",
+			"name": "Find Available Players",
 			"skipFiles": [
 				"<node_internals>/**"
 			],
 			"program": "${workspaceFolder}/src/findAvailablePlayers.js",
+			"console": "externalTerminal"
+		},
+		{
+			"type": "pwa-node",
+			"request": "launch",
+			"name": "Get Players",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${workspaceFolder}/src/getPlayers.js",
 			"console": "externalTerminal"
 		}
 	]
