Add projected rank and projected points to result

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
 	},
 	"devDependencies": {
 		"eslint": "^7.18.0"
+	},
+	"scripts": {
+		"start": "node src/findAvailablePlayers.js",
+		"seed": "node src/getPlayers.js"
 	}
 }
