--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"csv-parse": "^4.15.0",
 		"dotenv": "^8.2.0",
 		"lodash": "^4.17.20",
+		"open": "^7.3.1",
 		"p-limit": "^3.1.0",
 		"xml2js": "^0.4.23",
 		"yahoo-fantasy": "^4.1.2"
